--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,12 +9,12 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Galaxian_Remake.apk"
+export_path="../Galaxian_Remake.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
-script_export_mode=0
+script_export_mode=1
 
 [preset.0.options]
 
@@ -32,7 +32,7 @@ architectures/arm64-v8a=true
 architectures/x86=false
 architectures/x86_64=false
 version/code=1
-version/name=""
+version/name="0.5"
 package/unique_name="com.ironjuan.$genname"
 package/name=""
 package/signed=true
